--- a/src/component/screen/screen.css
+++ b/src/component/screen/screen.css
@@ -12,15 +12,14 @@
   
   .timer {
     color: #fff;
-    font-size: 100px;
+    font-size: 90px;
     font-weight: 100;
     height: 200px;
   }
   .btnStart-reset {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     display: flex;
     justify-content: space-between;
-    width: 300px;
   }
   
   .btn-reset {
@@ -33,6 +32,20 @@
     border-width: 0px;
     cursor: pointer;
   }
+  .content-lap {
+    height: 50vh;
+    overflow: auto;
+  }
+  ::-webkit-scrollbar {
+    width: 7px;
+  }
+  ::-webkit-scrollbar-track {
+    background-color: rgb(145, 138, 138);
+  }
+  ::-webkit-scrollbar-thumb {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: white;
+  }
   .btn-lap, 
   .btn-start {
     color: #fff;
@@ -44,6 +57,13 @@
     border-radius: 80px;
     border-width: 0px;
     cursor: pointer;
+  }
+  .btnLap {
+    height: 30px;
+  }
+  p.laptime {
+    line-height: 2px;
+    font-size: 14px;
   }
   .btn-stop {
     color: red;
@@ -68,6 +88,7 @@
     font-size: 24px;
     color: white;
     text-align: center;
+    margin-top: 150px;
   }
   .sec_hand {
     position: absolute;
@@ -148,4 +169,26 @@
     left: 10%;
   }
   
+  /* swipper */
+  .swiper {
+    width: 20vw;
+    height: 100%;
+  }
   
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  /* swipper */
