--- a/src/component/screen/screen.css
+++ b/src/component/screen/screen.css
@@ -146,7 +146,7 @@
   
   .six {
     bottom: 10px;
-    left: 50%;
+    left: 46%;
   }
   
   .seven {
@@ -171,7 +171,7 @@
   
   /* swipper */
   .swiper {
-    width: 20vw;
+    width: 350px;
     height: 100%;
   }
   
@@ -189,6 +189,10 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  @media screen and (max-witdh )  {
+    
   }
   
   /* swipper */
