--- a/src/component/screen/screen.css
+++ b/src/component/screen/screen.css
@@ -16,11 +16,16 @@
     font-weight: 100;
     height: 200px;
   }
-  .btnStart-reset {
+  .btn-start-reset {
     margin-bottom: 10px;
     display: flex;
     justify-content: space-between;
   }
+  .buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
   
   .btn-reset {
     color: #fff;
@@ -39,16 +44,12 @@
   ::-webkit-scrollbar {
     width: 7px;
   }
-  ::-webkit-scrollbar-track {
-    background-color: rgb(145, 138, 138);
-  }
   ::-webkit-scrollbar-thumb {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: white;
   }
   .btn-lap, 
   .btn-start {
-    color: #fff;
     background-color: #006128;
     color: #00e81b;
     font-size: 20px;
@@ -190,9 +191,3 @@
     height: 100%;
     object-fit: cover;
   }
-
-  @media screen and (max-witdh )  {
-    
-  }
-  
-  /* swipper */
